# chokoballs

./: .gitignore  CMakeLists.txt  CMakeSettings.json
examples/aaa/a/b/: gravity_example
examples/aaa/resources/: frag.txt
examples/collision_ball/: CMakeLists.txt  main.cpp
examples/gravity/: CMakeLists.txt  main.cpp
examples/resources/: fragd.txt  map1.blend  map1.mtl  vert.txt
examples/test/: CMakeLists.txt  main.cpp
include/: chokoballs.hpp
include/cb/: chokoballs_includes.hpp  defines.hpp  object.hpp  world.hpp
include/cb/collision/: collision_point.hpp
include/cb/enums/: backend_type.hpp  object_type.hpp
include/cb/ext/: ptrref.hpp
include/cb/ext/detail/: ptrref.inl
include/cb/hierarchy/bvh/: bvh_builder.hpp
include/cb/object/: collider.hpp  object_collider.hpp  object_rigidbody.hpp  rigidbody.hpp
include/cb/object/collider/: box_collider.hpp  infplane_collider.hpp  mesh_collider.hpp  plane_collider.hpp  sphere_collider.hpp
include/cb/object/enums/: collider_type.hpp
include/cb/types/: bbox.hpp  ray.hpp  rayhit.hpp
share/: FindChokoBalls.cmake
src/: CMakeLists.txt  backend.hpp  chokoballs.cpp  chokoballs_internal.hpp  world.cpp
src/backend/cpu/: CMakeLists.txt  backend_cpu.cpp  backend_cpu.hpp
src/backend/cpu/bvh/: CMakeLists.txt  bvh_builder.cpp  bvh_builder.hpp  bvh_node.hpp
src/backend/cpu/collider/: CMakeLists.txt  impl_collider.cpp  impl_collider.hpp
src/backend/cpu/collision/: CMakeLists.txt  contact.hpp  contact_finder.cpp  contact_finder.hpp  impl_bbox.hpp  impl_collision.hpp
src/backend/cpu/object/: CMakeLists.txt  impl_object.cpp  impl_object.hpp
src/hierarchy/bvh/: bvh_element.hpp
src/object/: CMakeLists.txt  collider.cpp  object_collider.cpp  object_rigidbody.cpp  rigidbody.cpp
src/object/collider/: CMakeLists.txt  box_collider.cpp  infplane_collider.cpp  mesh_collider.cpp  plane_collider.cpp  sphere_collider.cpp
src/types/: CMakeLists.txt  bbox.cpp
